<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoCommander</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Arduino"></string>
    <string name="arduinoc">Arduino Commander</string>
    <string name="Right">Right</string>
    <string name="Behind">Behind</string>
    <string name="Left">Left</string>
    <string name="Front">Front</string>

</resources>
