<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arduinocommander.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/arduinoc" />

    <Button
        android:id="@+id/but_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/but_left"
        android:layout_alignBottom="@+id/but_left"
      
        android:text="@string/Right" />

    <Button
        android:id="@+id/but_behind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/but_front"
        android:layout_alignBottom="@+id/but_front"
    
        android:text="@string/Behind" />

    <Button
        android:id="@+id/but_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="47dp"
        android:layout_marginTop="162dp"
        android:text="@string/Left" />

    <Button
        android:id="@+id/but_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/but_left"
        android:layout_below="@+id/but_left"
        android:layout_marginTop="56dp"
        android:text="@string/Front" />

</RelativeLayout>